2004-06-21  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.h (ARM_LEGITIMIZE_RELOAD_ADDRESS): Soft-float need
	not imply FPA.

2004-06-15  Paul Brook  <paul@codesourcery.com>

	* dwarf2out.c (output_call_frame_info): Support dwarf3 cie entries.

2004-05-28  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.c (arm_output_epilogue): Remove redundant code.

2004-05-28  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.c (thumb_force_lr_save): New function.
	(arm_get_frame_offsets, thumb_unexpanded_epilogue,
	thumb_output_function_prologue): Use it.
	(thumb_expand_prologue): Set lr_save_eliminated.

2004-05-25  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.c (thumb_exit, thumb_unexpanded_epilogue): Remove
	pointless #ifdef.

2004-05-17  Paul Brook  <paul@codesourcery.com>

	* unwind-dw2-fde.c (get_cie_encoding): Handle dwarf3 CIE format.
	* unwind-dw2.c (extract_cie_info): Ditto.
	(_Unwind_FrameState): Change retaddr_column to word type.

2004-05-20  Paul Brook  <paul@codesourcery.com>

	Backport from mainline.
	* calls.c (precompute_arguments): Use PROMOTE_FUNCTION_MODE instead
	of PROMOTE_FOR_CALL_ONLY.
	* explow.c (promote_mode): Ditto.
	* function.c (assign_temp): Ditto.
	* system.h: Poison PROMOTE_FOR_CALL_ONLY.
	* config/arm/arm-protos.h (arm_function_value): Add prototype.
	* config/arm/arm.c (arm_promote_prototypes): New function.
	(TARGET_PROMOTE_FUNCTION_ARGS, TARGET_PROMOTE_FUNCTION_RETURN,
	TARGET_PROMOTE_PROTOTYPES): Define.
	(arm_function_value): New function.
	* config/arm/arm.h (PROMOTE_FUNCTION_MODE): Define.
	(FUNCTION_VALUE): Use arm_function_value.
	(PROMOTE_PROTOTYPES): Define.
	* config/cris/cris.h: Use PROMOTE_FUNCTION_MODE instead
	of PROMOTE_FOR_CALL_ONLY/PROMOTE_MODE.
	* config/mmix/mmix.h: Ditto.
	* config/s390/s390.h: Ditto.
	* config/sparc/sparc.h: Ditto.
	* doc/tm.texi: Document PROMOTE_FUNCTION_MODE.
	Remove PROMOTE_FOR_CALL_ONLY.

2004-05-15  Richard Earnshaw  <reanrsha@arm.com>
